# polars-book

./: .gitignore  .pre-commit-config.yaml  404.html  API_REFERENCE_LINKS.yaml  CONTRIBUTING.md  Contributing.md  Dockerfile  Makefile  README.md  create_data.py  deploy.sh  download.sh  generate_data.py  generate_ref_guide_python.py  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  rome.json  sitemap.xml  tasks.sh  utils.py
user_guide/src/examples/: Cargo.toml  paths.py
user_guide/src/examples/aggregate/: __main__.py  snippet.py
user_guide/src/examples/column_row_selection/: __main__.py  dataset.py
user_guide/src/examples/combining_data/: __main__.py  anti_join_example.py  asof_join_example.py  combining_data_examples.py  cross_join_example.py  diagonal_concat_example.py  horizontal_concat_example.py  inner_join_example.py  left_join_example.py  outer_join_example.py  semi_join_example.py  vertical_concat_example.py
user_guide/src/examples/conditionally_apply/: __main__.py  dataset.py  eager.py  lazy.py  snippet.py
user_guide/src/examples/dataframe/: __main__.py  add_col.py  cat_join.py  dataset.py  datatypes.py  date_groupby.py  guide_magic.py  info.py  replace.py
user_guide/src/examples/df_manipulations/: __main__.py  add_column.py  casting.py  drop_column.py  rename_column.py
user_guide/src/examples/expressions/: __main__.py  agg_context_1.py  agg_context_2.py  apply_function.rs  apply_function_1.py  apply_function_2.py  apply_function_3.py  contexts.rs  dataset.py  expressions.rs  expressions_examples.rs  expressions_examples_1.py  expressions_examples_2.py  expressions_examples_3.py  expressions_examples_4.py  expressions_examples_5.py  fold.rs  fold_1.py  fold_2.py  fold_3.py  groupby.rs  list_row_wise.rs  list_row_wise_1.py  list_row_wise_2.py  map_function.rs  map_function_1.py  numpy_ufunc.py  select_context_1.py  select_context_2.py  select_context_3.py  window.py  window.rs  window_1.py  window_2.py  window_3.py  window_group_1.py  window_group_2.py  with_column_context_1.py  with_column_context_2.py
user_guide/src/examples/filter/: __main__.py  eager.py  lazy.py
user_guide/src/examples/group_statistics/: __main__.py  dataset.py  snippet1.py  snippet2.py  snippet3.py
user_guide/src/examples/groupby/: dsl.py  snippet.py
(+710 files in other folders)
