[package]
name = "user_guide"
version = "0.1.0"
edition = "2021"

[[example]]
name = "expressions"
path = "expressions/expressions.rs"

[[example]]
name = "contexts"
path = "expressions/contexts.rs"

[[example]]
name = "groupby"
path = "groupby_dsl/groupby.rs"

[dependencies]
polars = { version = "0.23.2", features = ["lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical"]}
color-eyre = "0.6.2"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking"]}